Fix password form parsing