@@ -8,6 +8,11 @@ public class AddPasswordHandler implements HttpHandler {
     public void handle(HttpExchange exchange) throws IOException {
 
         try {
+            if (!exchange.getRequestMethod().equalsIgnoreCase("POST")) {
+                exchange.sendResponseHeaders(405, -1);
+                return;
+            }
+
             String cookie = exchange.getRequestHeaders().getFirst("Cookie");
 
             String session = null;
@@ -27,22 +32,27 @@ public class AddPasswordHandler implements HttpHandler {
             String website = "", username = "", password = "";
 
             for (String pair : body.split("&")) {
-                String[] kv = pair.split("=");
-                String val = URLDecoder.decode(kv[1], "UTF-8");
+                String[] kv = pair.split("=", 2);
+                String keyName = URLDecoder.decode(kv[0], StandardCharsets.UTF_8);
+                String val = kv.length > 1 ? URLDecoder.decode(kv[1], StandardCharsets.UTF_8) : "";
 
-                if (kv[0].equals("website")) website = val;
-                if (kv[0].equals("username")) username = val;
-                if (kv[0].equals("password")) password = val;
+                if (keyName.equals("website")) website = val;
+                if (keyName.equals("username")) username = val;
+                if (keyName.equals("password")) password = val;
             }
 
             PasswordManager.savePassword(email, website, username, password, key);
 
             exchange.getResponseHeaders().add("Location", "/vault");
             exchange.sendResponseHeaders(302, -1);
-            exchange.close();
 
         } catch (Exception e) {
             e.printStackTrace();
+            String res = "Save failed";
+            exchange.sendResponseHeaders(500, res.length());
+            exchange.getResponseBody().write(res.getBytes(StandardCharsets.UTF_8));
+        } finally {
+            exchange.close();
         }
     }
 }
